# aarch64-extensions

./: .clang-format  .gitignore  .gitmodules  A64.cpp  A64.h  CMakeLists.txt  LICENSE  LiftDT.h  LiftFP.cpp  LiftFP.h  LiftGR.h  LiftVT.h  README.md  aarch64_extension.cpp
.github/workflows/: build.yml
src/: LiftDT.cpp  LiftGR.cpp  LiftVT.cpp
tdata/: fmov.s  str.s
